<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>org.nan</groupId>
        <artifactId>LedDeviceCloudPlatform</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    
    <artifactId>message-service</artifactId>
    <packaging>pom</packaging>
    <description>消息中心服务 - 统一的WebSocket和消息处理中心</description>
    
    <modules>
        <module>message-api</module>
        <module>message-application</module>
        <module>message-infrastructure</module>
        <module>message-boot</module>
    </modules>
    
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <dependencies>
        <!-- Spring Boot WebSocket 支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        
        <!-- RabbitMQ 支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>
        
        <!-- MongoDB 支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>
        
        <!-- Redis 支持 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        
        <!-- Spring Cloud Stream (消息驱动) -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
        </dependency>
        
        <!-- Spring Cloud Stream RabbitMQ Binder -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
        </dependency>
        
        <!-- 通用模块依赖 -->
        <dependency>
            <groupId>org.nan</groupId>
            <artifactId>common-basic</artifactId>
        </dependency>
        
        <dependency>
            <groupId>org.nan</groupId>
            <artifactId>common-web</artifactId>
        </dependency>
    </dependencies>
</project>